welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:4: error: Boolean(true) does not take parameters
}while(estSurBlanc==true())
                        ^